# pycolorlogs

./: MANIFEST.in  Pipfile  README.md  __init__.py  color_logger.py  colors.py  pyproject.toml  test.py  test_main.py
examples/: example.py
pycolorlogs/: __init__.py  colors.py
src/: __init__.py  colors.py
tests/: test.py
