[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'pycolorlogs'
version = '1.0.0'
description = 'Make extend default python logging package to include 256-bit terminal colors'
readme = 'README.md'
authors = [{ name = 'Pedro Menegasso', email='pvgmenegasso@gmail.com'}]
license = { file = 'LICENSE' }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    ]
keywords = ['logging', 'colors', 'output', 'devops', 'cli', 'linux']
dependencies = []
requires-python = '>=3.9'

