[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'pycolorlogs'
version = '1.0.0'
description = 'Extends default python logging package to include 256-bit terminal colors'
readme = 'README.md'
authors = [{ name = 'Pedro Menegasso', email='pvgmenegasso@gmail.com'}]
license = { file = 'LICENSE' }
classifiers = [
    'License :: OSI Approved :: GGPL',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent'
    ]
keywords = ['logging', 'colors', 'output', 'devops', 'cli', 'linux']
dependencies = ['dataclasses']
requires-python = '>=3.6.15'

[project.urls]
'Homepage' = 

